--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "^3.5.0",
+    "nock": "^8.0.0",
+    "testdouble":"^1.6.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.9.2",
