--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "nock": "^8.0.0",
+    "sinon": "^1.17.5",
     "testdouble":"^1.6.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
