--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "nock": "^8.0.0",
     "sinon": "^1.17.5",
     "testdouble":"^1.6.1",
