--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "description": "lamda_authorizer Node.js Lambda function",
   "repository": "lamda_authorizer",
   "version": "1.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "winston": "^2.2.0"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "nock": "^8.0.0",
     "sinon": "^1.17.5",
-    "testdouble":"^1.6.1",
+    "testdouble": "^1.6.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.9.2",
