--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lamda_authorizer",
   "description": "lamda_authorizer Node.js Lambda function",
   "repository": "lamda_authorizer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "dependencies": {
     "winston": "^2.2.0"
   },
@@ -20,9 +20,10 @@
     "lambda-tester": "^2.6.0"
   },
   "scripts": {
-    "lint": "eslint *.js test/**",
+    "lint": "eslint *.js lib/** test/**",
     "test": "mocha test --recursive",
-    "build": "sh build.sh ${npm_package_version}"
+    "build": "sh build.sh ${npm_package_version}",
+    "prebuild": "npm run test"
   },
   "author": "Expanse, LLC",
   "license": "Apache-2.0"
