--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lamda_authorizer",
   "description": "lamda_authorizer Node.js Lambda function",
   "repository": "lamda_authorizer",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "dependencies": {
     "winston": "^2.2.0"
   },
@@ -23,7 +23,7 @@
     "lint": "eslint *.js lib/** test/**",
     "test": "mocha test --recursive",
     "build": "sh build.sh ${npm_package_version}",
-    "prebuild": "npm run test"
+    "prebuild": "npm run test && npm run lint"
   },
   "author": "Expanse, LLC",
   "license": "Apache-2.0"
