--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "mocha": "^5.1.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "nock": "^8.0.0",
